[package]
name = "Portal"
version = "0.1.0"
authors = ["trolleyman <cgtrolley@gmail.com>"]

[dependencies]
nalgebra = "*"
ncollide = "*"
#rand = "*"

#[dependencies.nalgebra]
#git = "https://github.com/sebcrozet/nalgebra"
#
#[dependencies.ncollide]
#git = "https://github.com/sebcrozet/ncollide"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
